--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,34 @@
 body {
-  background: #2d3339
-}
-.warning {
-  border: 5px solid #e1dfbe;
-  width: 200px;
-  margin: 100px auto 20px;
-  border-radius: 5px;
-  padding: 20px 10px;
-  text-align: center;
-  font-size: 32px
-}
-.warning span {
-  color: #f4f3ce;
+  background: #2f558e url(../img/bg.png) repeat 0 0;
+  background-size: 400px auto;
   font-family: sans-serif;
-  font-weight: bold;
 }
-.image {
-  position: absolute;
-  top: 20%;
-  width: 100%;
+img {
+  display: block;
+  width: 150px;
+  margin: 100px auto;
+}
+button {
+  background: #dae1e4;
+  border: none;
+  border-radius: 5px;
+  color: #1d3c6a;
+  font-size: 24px;
+  width: 480px;
+  padding: 40px 0;
+  margin: -40px -20px;
+  outline: none;
+  cursor: pointer;
+}
+.spoiler {
+	background: #1d3c6a;
+  width: 440px;
+  margin: 0 auto 20px;
+  border-radius: 5px;
+  padding: 40px 20px;
   text-align: center;
-  z-index: -1
+  font-size: 24px
+}
+.spoiler span {
+  color: #dae1e4;
 }
